@@ -706,6 +706,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\leakHunter.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\IrrlichtDevice.h"
 				>
 			</File>
@@ -2698,6 +2702,10 @@
 				</File>
 				<File
 					RelativePath="Irrlicht.cpp"
+					>
+				</File>
+				<File
+					RelativePath="leakHunter.cpp"
 					>
 				</File>
 				<File
